--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
             "request": "launch",
             "module": "solace_ai_connector.main",
             "console": "integratedTerminal",
-            "args": "--envfile .env examples/mcp_gateway.yaml examples/a2a_orchestrator.yaml examples/a2a_agents.yaml",
+            "args": "--envfile .env examples/mcp_gateway.yaml examples/a2a_orchestrator.yaml examples/a2a_agents.yaml examples/webui_backend.yaml",
             "justMyCode": false,
         },
         {
