--- a/templates/shared_config.yaml
+++ b/templates/shared_config.yaml
@@ -50,13 +50,13 @@ shared_config:
   - services:
     # Default session service configuration
     session_service: &default_session_service
-      type: "__DEFAULT_SESSION_SERVICE_TYPE__"
-      default_behavior: "__DEFAULT_SESSION_SERVICE_BEHAVIOR__"
+      type: "memory"
+      default_behavior: "PERSISTENT"
     
     # Default artifact service configuration
     artifact_service: &default_artifact_service
       type: "__DEFAULT_ARTIFACT_SERVICE_TYPE__"
-      __DEFAULT_ARTIFACT_SERVICE_BASE_PATH_LINE__
+      # __DEFAULT_ARTIFACT_SERVICE_BASE_PATH_LINE__
       artifact_scope: __DEFAULT_ARTIFACT_SERVICE_SCOPE__
     
     # Default data tools configuration
