Docs and tests cleanup

--- a/tests/integration/scenarios_declarative/test_data/artifacts/test_filepart_by_reference.yaml
+++ b/tests/integration/scenarios_declarative/test_data/artifacts/test_filepart_by_reference.yaml
@@ -1,6 +1,7 @@
 test_case_id: "artifact_by_reference_success_001"
 description: "Tests that a referenced file (FileWithUri) is correctly processed by the agent."
 tags: ["all", "common"]
+skip_intermediate_events: true
 
 setup_artifacts:
   - filename: "user:company_profile.txt"
