--- a/tests/integration/scenarios_declarative/test_data/artifacts/test_inline_file_no_name.yaml
+++ b/tests/integration/scenarios_declarative/test_data/artifacts/test_inline_file_no_name.yaml
@@ -19,12 +19,12 @@ gateway_input:
 llm_interactions:
   - expected_request:
       prompt_contains_artifact_summary_for:
-        - filename_matches_regex: "^upload-.*"
+        - filename_matches_regex: "^upload-.*[^n]$"
     static_response:
       choices: [{message: {role: "assistant", content: "I have processed the unnamed file."}}]
 
 expected_artifacts:
-  - filename_matches_regex: "^upload-.*"
+  - filename_matches_regex: "^upload-.*[^n]$"
     version: 0
     mime_type: "text/plain"
     content_base64_exact: "VGhpcyBmaWxlIGhhcyBubyBuYW1lLg=="
