--- a/tests/integration/scenarios_declarative/test_data/artifacts/test_referenced_file_not_found.yaml
+++ b/tests/integration/scenarios_declarative/test_data/artifacts/test_referenced_file_not_found.yaml
@@ -1,6 +1,7 @@
 test_case_id: "artifact_ref_not_found_001"
 description: "Tests graceful failure when a referenced artifact does not exist."
 tags: ["all", "common"]
+skip_intermediate_events: true
 
 gateway_input:
   target_agent_name: "TestAgent"
