--- a/examples/a2a_proxy.yaml
+++ b/examples/a2a_proxy.yaml
@@ -14,7 +14,7 @@ log:
 apps:
   - name: a2a_proxy_app
     app_base_path: .
-    app_module: src.agent.proxies.a2a.app # Points to the A2AProxyApp class
+    app_module: src.solace_agent_mesh.agent.proxies.a2a.app 
     broker:
       <<: *broker_connection
 
