feat: Fix all the tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -171,7 +171,9 @@ markers = [
     "tools: marks tests related to the agent tools",
     "audio_tools: marks tests related to the audio_tools",
     "builtin_artifact_tools: marks tests related to the builtin_artifact_tools",
+    "builtin_artifact_embeds: marks tests related to the builtin_artifact_embeds",
     "builtin_data_analysis_tools: marks tests related to the builtin_data_analysis_tools",
+    "error_handling: marks tests related to the error_handling",
     "general_agent_tools: marks tests related to the general_agent_tools",
     "image_tools: marks tests related to the image_tools",
     "peer_agent_tool: marks tests related to the peer_agent_tool",
