--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,6 +29,18 @@
             }
         },
         {
+            "name": "SAM (test with Slack)",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "solace_ai_connector.main",
+            "console": "integratedTerminal",
+            "args": "--envfile .env examples/gateways/slack_gateway_example.yaml examples/agents/orchestrator_example.yaml examples/agents/a2a_agents_example.yaml examples/gateways/webui_example.yaml examples/agents/test_agent.yaml examples/agents/a2a_multimodal_example.yaml",
+            "justMyCode": false,
+            "env": {
+                "LOGGING_CONFIG_PATH": "${workspaceFolder}/preset/logging_config.ini"
+            }
+        },
+        {
             "name": "SAM (test with event-mesh-gateway)",
             "type": "debugpy",
             "request": "launch",
