feat: switch dependencies to exact versions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,45 +22,45 @@ classifiers = [
 ]
 dependencies = [
     "google-adk==1.7.0",
-    "a2a-sdk[http-server]>=0.3.1",
-    "pydantic>=2.0",
+    "a2a-sdk[http-server]==0.3.1",
+    "pydantic==2.0",
     "click~=8.1.7",
-    "python-dotenv>=1.0",
-    "google-genai>=1.16.0",
-    "httpx>=0.25",
-    "jwcrypto>=1.5",
-    "python-jwt>=3.3",
-    "asteval>=1.0.6",
-    "pystache>=0.6.8",
-    "pandas>=2.2.3",
-    "numpy>=2.2.5",
-    "plotly>=6.0.1",
+    "python-dotenv==1.0",
+    "google-genai==1.16.0",
+    "httpx==0.25",
+    "jwcrypto==1.5",
+    "python-jwt==3.3",
+    "asteval==1.0.6",
+    "pystache==0.6.8",
+    "pandas==2.2.3",
+    "numpy==2.2.5",
+    "plotly==6.0.1",
     "kaleido==0.2.1",
-    "PyYAML>=6.0",
-    "python-multipart>=0.0.7",
+    "PyYAML==6.0",
+    "python-multipart==0.0.7",
     "markitdown[all]==0.1.1",
-    "jmespath>=1.0.1",
+    "jmespath==1.0.1",
     "mermaid-cli",
-    "playwright>=1.54.0",
+    "playwright==1.54.0",
     "litellm==1.76.3",
-    "markdownify>=1.1.0",
-    "beautifulsoup4>=4.12.0",
-    "jsonpath-ng>=1.7.0",
-    "pydub>=0.25.1",
+    "markdownify==1.1.0",
+    "beautifulsoup4==4.12.0",
+    "jsonpath-ng==1.7.0",
+    "pydub==0.25.1",
     "asteval~=1.0.0",
     "toml~=0.10.2",
     "GitPython~=3.1.44",
     "Flask==3.0.3",
-    "Flask-Cors>=5.0.0",
-    "fastapi>=0.100",
-    "uvicorn[standard]>=0.20",
-    "sse-starlette>=1.6",
-    "itsdangerous>=2.0",
+    "Flask-Cors==5.0.0",
+    "fastapi==0.100",
+    "uvicorn[standard]==0.20",
+    "sse-starlette==1.6",
+    "itsdangerous==2.0",
     "solace-ai-connector==1.2.0",
-    "holidays>=0.24",
+    "holidays==0.24",
     "rouge~=1.0.1",
-    "sqlalchemy>=2.0",
-    "alembic>=1.13.1",
+    "sqlalchemy==2.0",
+    "alembic==1.13.1",
     "openai==1.99.9"
 ]
 
