--- a/templates/logging_config_template.ini
+++ b/templates/logging_config_template.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,LiteLLM,py_warnings,solace_ai_connector,uvicorn,uvicorn_error,uvicorn_access
+keys=root,sam_trace,LiteLLM,py_warnings,solace_ai_connector,uvicorn,uvicorn_error,uvicorn_access
 
 [handlers]
 keys=streamHandler,rotatingFileHandler
@@ -11,6 +11,12 @@ keys=simpleFormatter
 level=DEBUG
 handlers=streamHandler,rotatingFileHandler
 qualname=root
+
+[logger_sam_trace]
+level=INFO
+handlers=streamHandler,rotatingFileHandler
+qualname=sam_trace
+propagate=0
 
 [handler_streamHandler]
 class=StreamHandler
