--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "python-multipart==0.0.20",
     "markitdown[all]==0.1.1",
     "jmespath==1.0.1",
-    "mermaid-cli==0.1.2",
+    "mermaid_cli==0.1.2",
     "playwright==1.55.0",
     "litellm==1.76.3",
     "markdownify==1.2.0",
@@ -50,15 +50,15 @@ dependencies = [
     "toml==0.10.2",
     "GitPython==3.1.45",
     "Flask==3.0.3",
-    "Flask-Cors==6.0.1",
+    "flask-cors==6.0.1",
     "fastapi==0.117.1",
     "uvicorn[standard]==0.37.0",
     "sse-starlette==3.0.2",
     "itsdangerous==2.2.0",
-    "solace-ai-connector==1.2.0",
+    "solace_ai_connector==1.2.0",
     "holidays==0.81.0",
     "rouge==1.0.1",
-    "sqlalchemy==2.0.40",
+    "SQLAalchemy==2.0.40",
     "alembic==1.16.5",
     "openai==1.99.9"
 ]
