chore:restore old alembic.ini

--- a/src/solace_agent_mesh/gateway/http_sse/alembic.ini
+++ b/src/solace_agent_mesh/gateway/http_sse/alembic.ini
@@ -5,7 +5,7 @@
 # this is typically a path given in POSIX (e.g. forward slashes)
 # format, relative to the token %(here)s which refers to the location of this
 # ini file
-script_location = src/solace_agent_mesh/gateway/http_sse/alembic
+script_location = %(here)s/alembic
 
 # Template used to generate migration file names
 # Format: YYYYMMDD_revision_description
@@ -82,7 +82,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = sqlite:////Users/edfunnekotter/solace_agent_mesh.db
+# sqlalchemy.url = sqlite:////Users/mradwan/solace_agent_mesh.db
 
 
 [post_write_hooks]
