Adding sam_trace logger to logging presets

--- a/preset/logging_config.ini
+++ b/preset/logging_config.ini
@@ -12,6 +12,12 @@ level=DEBUG
 handlers=streamHandler,rotatingFileHandler
 qualname=root
 
+[logger_sam_trace]
+level=INFO
+handlers=streamHandler,rotatingFileHandler
+qualname=sam_trace
+propagate=0
+
 [handler_streamHandler]
 class=StreamHandler
 level=INFO
