Missing sam_trace in logger list

--- a/preset/logging_config.ini
+++ b/preset/logging_config.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,LiteLLM,py_warnings,solace_ai_connector,uvicorn,uvicorn_error,uvicorn_access
+keys=root,sam_trace,LiteLLM,py_warnings,solace_ai_connector,uvicorn,uvicorn_error,uvicorn_access
 
 [handlers]
 keys=streamHandler,rotatingFileHandler
