--- a/pyproject.toml
+++ b/pyproject.toml
@@ -166,6 +166,8 @@ markers = [
     "mcp: marks tests related to mcp",
     "notification: marks tests related to notifications",
     "task_cancellation: marks tests related to task cancellation",
+    "api: marks tests related to the API",
+    "tasks: marks tests related to task management",
 
     # Agent Tools
     # Markers for the built-in agent tools.
