--- a/tests/integration/scenarios_declarative/test_data/mcp/test_mcp_streamable_http.yaml
+++ b/tests/integration/scenarios_declarative/test_data/mcp/test_mcp_streamable_http.yaml
@@ -10,7 +10,7 @@ test_runner_config_overrides:
 
 gateway_input:
   target_agent_name: "TestAgent"
-  user_identity: "mcp_http_tester@example.com"
+  user_identity: "mcp_streamable_http_tester@example.com"
   parts:
     - type: "text"
       text: "Get text data from the test server via Streamable HTTP."
@@ -23,35 +23,35 @@ llm_interactions:
         - message:
             role: "assistant"
             tool_calls:
-              - id: "call_mcp_tool_http"
+              - id: "call_mcp_tool_streamable_http"
                 type: "function"
                 function:
                   name: "get_data_streamable_http"
                   arguments: '{"response_to_return": {"content": [{"type": "text",
-                    "text": "This is a simple text response via HTTP."}]}}'
+                    "text": "This is a simple text response via Streamable HTTP."}]}}'
   - expected_request:
       expected_tool_responses_in_llm_messages:
         - tool_name: "get_data_streamable_http"
           response_json_matches:
             status: "processed_and_saved"
             message_to_llm_matches_regex: "The full response has been saved as artifact
-              'get_data_http_text_0_.*\\.txt' \\(version 0\\)\\."
+              'get_data_streamable_http_text_0_.*\\.txt' \\(version 0\\)\\."
             saved_mcp_response_artifact_details:
               status: "success"
               artifacts_saved:
-                - data_filename_matches_regex: "get_data_http_text_0_.*\\.txt"
+                - data_filename_matches_regex: "get_data_streamable_http_text_0_.*\\.txt"
                   status: "success"
     static_response:
       choices:
         - message:
             role: "assistant"
-            content: "I have retrieved the text data via HTTP and saved it as an artifact."
+            content: "I have retrieved the text data via Streamable HTTP and saved it as an artifact."
 
 expected_gateway_output:
   - type: "final_response"
     kind: task
     id: '*'
-    contextId: "session_mcp_http_transport_001"
+    contextId: "session_mcp_streamable_http_transport_001"
     status:
       state: completed
       message:
@@ -60,8 +60,7 @@ expected_gateway_output:
         role: agent
         parts:
           - type: "text"
-            text_exact: "I have retrieved the text data via HTTP and saved it as an
-              artifact."
+            text_exact: "I have retrieved the text data via Streamable HTTP and saved it as an artifact."
     assert_artifact_state:
       - filename_matches_regex: "get_data_streamable_http_text_0_.*\\.txt$"
         version: 0
