--- a/client/webui/frontend/package.json
+++ b/client/webui/frontend/package.json
@@ -100,6 +100,7 @@
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^16.0.0",
+        "lint-staged": "^16.2.3",
         "prettier-plugin-tailwindcss": "^0.6.13",
         "tw-animate-css": "^1.3.3",
         "typescript": "~5.8.3",
