--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -152,10 +152,10 @@ jobs:
       matrix:
         platform:
           - name: linux/amd64
-            runner: ubuntu-latest
+            runner: ubuntu-24.04
             tag_suffix: amd64
           - name: linux/arm64
-            runner: ubuntu-latest-arm64
+            runner: ubuntu-24.04-arm
             tag_suffix: arm64
     runs-on: ${{ matrix.platform.runner }}
     steps:
