--- a/examples/gateways/webui_example.yaml
+++ b/examples/gateways/webui_example.yaml
@@ -70,6 +70,6 @@ apps:
 
       # --- Frontend Config Passthrough ---
       frontend_welcome_message: >
-            __FRONTEND_WELCOME_MESSAGE__
-      frontend_bot_name: __FRONTEND_BOT_NAME__
-      frontend_collect_feedback: __FRONTEND_COLLECT_FEEDBACK__
+            
+      frontend_bot_name: Solace Agent Mesh
+      frontend_collect_feedback: false
