--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,46 +69,32 @@ s3 = ["boto3>=1.35.0,<2.0"]
 vertex = ["google-cloud-aiplatform>=1.38"]
 employee_tools = ["holidays>=0.24"]
 postgresql = ["psycopg2-binary>=2.9.0"]
-cli = [
-    "click>=8.0",
-    "prompt-toolkit>=3.0",
-    "rich>=13.0",
-]
-
-[tool.hatch.envs.default]
-installer = "pip"
-dependencies = [
-    "pytest>=7.0",
-    "pytest-asyncio>=0.20",
-    "ruff",
-    "solace-agent-mesh[database,cli,gcs,vertex,employee_tools,postgresql,s3]",
-    "sam-test-infrastructure @ {root:uri}/tests/sam-test-infrastructure"
-]
-
-[tool.hatch.envs.hatch-test]
-parallel = false
-installer = "pip"
-dependencies = [
-    "pytest_asyncio",
+test = [
+    "pytest-asyncio",
     "pytest>=8.0.0",
     "pytest-mock>=3.0.0",
     "pytest-cov>=4.0.0",
     "pytest-xdist>=3.5.0",
     "pytest-httpx>=0.35.0",
     "fastmcp",
-    "jsonschema>=4.0.0"
-]
-extra-dependencies = [
-    "solace-agent-mesh[database,cli,gcs,vertex,employee_tools,s3]",
+    "httpx>=0.25",
+    "ruff",
+    "solace-agent-mesh @ {root:uri}",
     "sam-test-infrastructure @ {root:uri}/tests/sam-test-infrastructure"
+]
+[tool.hatch.envs.hatch-test]
+parallel = false
+installer = "pip"
+dependencies = [
+    "solace-agent-mesh[test,postgresql,gcs,vertex,employee_tools,s3]",
 ]
 
 [[tool.hatch.envs.hatch-test.matrix]]
 python = ["3.10", "3.13"]
 
 [tool.hatch.envs.hatch-test.scripts]
-run = "pytest -m \"$(python3 ./tests/test_selector.py)\" {args}"
-run-cov = "coverage run -m pytest -m \"$(python3 ./tests/test_selector.py)\" {args}"
+run = "pytest {args}"
+run-cov = "coverage run -m pytest {args}"
 cov-combine = "coverage combine"
 cov-report = "coverage report"
 
@@ -131,7 +117,7 @@ quote-style = "double"
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
-addopts = "--tb=short --strict-markers --disable-warnings -p pytest_asyncio"
+addopts = "--tb=short --strict-markers --disable-warnings -p pytest_asyncio --ignore=tests/system"
 testpaths = ["tests"]
 pythonpath = [".", "src", "tests/sam-test-infrastructure/src"]
 python_files = ["test_*.py", "*_test.py", "tests.py"]
