--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,7 @@ gcs = ["google-cloud-storage>=2.0"]
 s3 = ["boto3>=1.35.0,<2.0"]
 vertex = ["google-cloud-aiplatform>=1.38"]
 employee_tools = ["holidays>=0.24"]
-postgresql = ["psycopg2-binary>=2.9.0"]
+postgresql = ["psycopg2-binary==2.9.10"]
 test = [
     "pytest-asyncio",
     "pytest>=8.0.0",
